infra/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-auth-depl
spec:
  selector:
    matchLabels:
      app: ticket-auth
  template:
    metadata:
      labels:
        app: ticket-auth
    spec:
      containers:
      - name: ticket-auth
        image: buncolak/ticket-auth
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-auth-srv
spec:
  selector:
    app: ticket-auth
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: 35.198.74.202
