infra/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-mongo
spec:
  selector:
    matchLabels:
      app: ticketing-mongo
  template:
    metadata:
      labels:
        app: ticketing-mongo
    spec:
      containers:
      - name: ticketing-mongo
        image: bitnami/mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-mongo-srv
spec:
  selector:
    app: ticketing-mongo
  ports:
  - port: 27017
    targetPort: 27017
