infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: "/users(.*)?"
        backend:
          service:
            name: ticket-auth-srv
            port: 
              number: 3000
